arreglos en los mapas y cambie imagen 1 de productos

--- a/assets/css/shortcodes2.css
+++ b/assets/css/shortcodes2.css
@@ -459,7 +459,7 @@
 }
 /* home3 */
 .bg-slider-3{
-  background: url("../img/slider/slider3.jpg") no-repeat center;
+  background: url("../img/slider/01.jpg") no-repeat center;
   background-size: cover;
 }
 .bg-slider-3 .swiper-content {
